* Added two new XPaths to select text nodes (issue 35).
* Compatibility with Firefox 8.
* Integration with the Firefox app menu.
* Subscription works from local files (URL file://...) (issue 25).
* Fixed instantiation of XMLHttpRequest for import from URL.
* String changes:
  - foxreplace.dtd: changed name: menuEditReplace -> menuReplace, menuContextFoxReplace -> contextMenuFoxReplace.
  - foxreplace.properties: new: fileNotFoundTitle, fileNotFoundText; removed: onlyHttp.

v0.12.2 (10-8-2009)
* Bugfix: the modules directory wasn't included in the XPI.

v0.12.1 (5-8-2009)
* Added minimum width to some columns in the options and substitution group editor dialogs.
* Substitution group editor modified to reduce height.
* New locale:
  - zh-CN (by yfdyh000).

v0.12.0 (21-7-2009)
* Subscription to update the substitution list periodically from an URL.
* Ability to use backslash-escaped characters in input (text and whole words) and output. Supported
  characters are \\ (backslash), \n (new line), \r (carriage return) and \t (tab).
* New list format 0.12 with the new interpretation of the backslash-escaped characters.
* Removed compatibility with the substitution list in the 0.8 format. 
* Removed compatibility with Firefox 1.5 and 2.
* Compatibility with Firefox 3.5.
* New locale:
  - nl-NL (by markh van BabelZilla.org).
* String changes:
  - foxreplace.properties: new: invalidSubscriptionUrl.
  - options.dtd: new: subscriptionCheckBox.label, subscriptionCheckBox.accesskey,
    subscriptionUrl.label, subscriptionUrl.accesskey, subscriptionPeriod.label,
    subscriptionPeriod.accesskey.

v0.11.0 (25-4-2009)
* Import from URL.
* Whole words substitutions now support the extended Latin alphabet, IPA extensions, and the Greek,
  Coptic and Cyrillic alphabets.
* "Clear" buttons in all dialogs disabled if their respective lists are empty.
* Forced text color of input textbox so it's visible with dark themes.